# ziptest-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
web/: package-lock.json  package.json
web/src/: index.html  index.js
